<?xml version="1.0" encoding="utf-8"?>


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.bitwis3.gaine.jottme3.HowToUse">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="#000000"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#0f3aaa"
                    android:clickable="true"
                    android:textSize="35dp"
                    android:layout_marginLeft="8dp"
                    android:text="EMAIL ME"
                    android:layout_marginStart="8dp"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#000000"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"/>/>
                <TextView
                    android:id="@+id/tutorial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TUTORIAL VIDEO/ HOW TO USE"
                    android:textSize="35dp"
                    android:layout_marginLeft="8dp"
                    android:textStyle="bold"
                    android:textColor="#0f3aaa"
                    android:clickable="true"
                    android:layout_marginStart="8dp" />

                <View
                    android:id="@+id/settingsview1"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#100001"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"/>

                    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Some pictures do not appear on some devices, I recommend watching the video link"/>
                <View

                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#100001"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"/>

                />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/menubutton"/>

                <TextView
                    android:id="@+id/textViewforSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_activity_tv1"

                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#100001"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"/>

                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/bottomnav"
                  />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_activity_tv2"

                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#100001"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"/>

                    />
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/spinnerfolder"/>
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_activity_tv3"

                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#100001"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"/>

                    />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/addfab"/>
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_activity_tv4"

                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#100001"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"/>

                    />
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    android:layout_weight="1"
                    android:src="@drawable/notification"

                   />
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_activity_tv5"

                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" />




            </LinearLayout>

        </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
android:layout_marginRight="@dimen/fab_margin"


        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_home_black_24dp" />

    </android.support.constraint.ConstraintLayout>


